# Hooty

./: .gitignore  Cargo.toml  README.md  bases.py  classes.py  code_wide.js  distances.py  evaluation.py  functions.py  hooty.css  hooty.py  hooty_eyes.js  hooty_eyes.ts  hooty_gui.py  index.html  main.py  printers.py  styles.css
docs/: animations.css  hooty.css
examples/: README.md
examples/example1/: alignment.fasta  expected.csv  expected_fullmatrix.csv  partition.txt
examples/example2/: alignment.fasta  expected.csv  expected_fullmatrix.csv  partition.txt
src/: distances.rs  main.rs  parsing.rs  printers.rs  structs.rs
styles/: animations.css  code.css  hooty.css  styles.css
